--- a/Style/style.css
+++ b/Style/style.css
@@ -1,28 +1,69 @@
-head{
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Otomanopee+One&family=Roboto:wght@100&display=swap');
+header {
     text-align: center;
-
+    color: #ededed;
+    background-color: #171717;
+    width: 50%;
+    height: 20vh;
+    margin: 30px auto;
 }
 
-body{
+header h1 {
+    font-family: 'Otomanopee One', sans-serif;
+}
+
+header h4 {
+    font-family: 'Indie Flower', cursive;
+}
+
+body {
     text-align: center;
     font-size: 20px;
-
+    font-family: 'Roboto', sans-serif;
+    background-color: #444444;
+    background-size: cover;
+    background-image: linear-gradient( 90deg, rgba(255, 80, 80, 0.4), rgba(68, 68, 68, 1)), url(https://360radio.com.co/wp-content/uploads/2020/06/Almacenes-tecnologia.jpg);
 }
 
-.style{
-    background-color: rgb(128, 79, 79);
-    height: auto;
-    width: auto;
-    border-radius: 10px;
-
-}
-
-#main{
-  
-    text-align:center;
-    background-color: transparent;
-    margin: 30px 10px 30px 10px;
+main {
+    display: block;
+    text-align: center;
+    background-color: rgba(218, 0, 55, 0.7);
+    margin: 20px auto 15px auto;
     padding: 15px;
-    font-family:'Courier New', Courier, monospace;
+    font-family: 'Roboto', sans-serif;
+    width: 60%;
+}
 
+.boton-captura {
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    width: 15%;
+    margin: 15px 5px 5px 20px;
+    padding: 0.15rem;
+    background: rgb(11, 212, 11);
+    color: inherit;
+    border-radius: 2px;
+    cursor: pointer;
+}
+
+.controlForma {
+    background-color: whitesmoke;
+}
+
+div {
+    text-align: center;
+    width: auto;
+}
+
+input {
+    height: 1.5rem;
+    width: auto;
+    text-align: justify;
+    padding: 0.20rem;
+}
+
+#inputCantComp {
+    width: 19rem;
+    text-align: center;
 }
