--- a/Style/style.css
+++ b/Style/style.css
@@ -3,7 +3,7 @@ header {
     text-align: center;
     color: #ededed;
     background-color: rgba(23, 23, 23, 0.8);
-    width: 50%;
+    width: 100vh;
     height: 20vh;
     margin: 30px auto;
     border-radius: 20px;
@@ -37,14 +37,14 @@ main {
     margin: 20px auto 15px auto;
     padding: 15px;
     font-family: 'Roboto', sans-serif;
-    width: 30%;
+    width: 80vh;
     border-radius: 20px;
 }
 
 .boton-captura {
     font-family: 'Indie Flower', cursive;
     font-size: 20px;
-    width: 35%;
+    width: 35vh;
     margin: 15px 5px 5px 20px;
     padding: 0.15rem;
     background: rgba(218, 0, 55, 0.93);
@@ -64,18 +64,18 @@ main {
 
 div {
     text-align: center;
-    width: auto;
+    width: 100vh;
 }
 
 input {
     height: 1.5rem;
-    width: auto;
+    width: 50vh;
     text-align: justify;
     padding: 0.20rem;
 }
 
 #inputCantComp {
-    width: 19rem;
+    width: 25rem;
     text-align: center;
 }
 
