--- a/Style/style.css
+++ b/Style/style.css
@@ -5,7 +5,7 @@ header {
     background-color: rgba(23, 23, 23, 0.8);
     width: 100vh;
     height: 20vh;
-    margin: 30px auto;
+    margin: 5vh auto;
     border-radius: 20px;
     text-shadow: 1px 3px 10px rgba(255, 58, 58, 0.4);
     box-shadow: 1px 3px 20px rgba(0, 0, 0, 0.767);
@@ -24,8 +24,9 @@ body {
     font-size: 20px;
     font-family: 'Roboto', sans-serif;
     background-color: #444444;
-    background-size: cover;
+    background-size: 100%;
     background-image: linear-gradient( 90deg, rgba(255, 80, 80, 0.4), rgba(68, 68, 68, 1)), url(https://360radio.com.co/wp-content/uploads/2020/06/Almacenes-tecnologia.jpg);
+    background-repeat: inherit;
     text-shadow: 1px 2px 10px rgba(255, 255, 255, 0.548);
 }
 
@@ -34,7 +35,7 @@ main {
     text-align: center;
     background-color: rgba(32, 64, 81, 0.8);
     box-shadow: 1px 2px 40px black;
-    margin: 20px auto 15px auto;
+    margin: 1.25rem auto 0.938rem auto;
     padding: 15px;
     font-family: 'Roboto', sans-serif;
     width: 80vh;
@@ -45,14 +46,14 @@ main {
     font-family: 'Indie Flower', cursive;
     font-size: 20px;
     width: 35vh;
-    margin: 15px 5px 5px 20px;
     padding: 0.15rem;
     background: rgba(218, 0, 55, 0.93);
     color: whitesmoke;
     border-radius: 2px;
     cursor: pointer;
     border-radius: 20px;
-    text-shadow: 1px 2px 10px rgba(255, 255, 255, 0.767)
+    text-shadow: 1px 2px 10px rgba(255, 255, 255, 0.767);
+    margin: 1rem 8rem auto auto;
 }
 
 .controlForma {
@@ -60,6 +61,7 @@ main {
     border-radius: 20px;
     text-align: center;
     font-size: 16px;
+    margin: auto 8rem auto auto;
 }
 
 div {
@@ -81,5 +83,11 @@ input {
 
 #valorDesc {
     color: rgb(255, 5, 18);
-    text-shadow: 1px 2px 10px rgba(0, 0, 0, 0.767)
+    text-shadow: 1px 2px 10px rgba(0, 0, 0, 0.767);
+    text-align: center;
+    margin: auto auto auto -4rem;
+}
+
+.controlLabel {
+    margin-right: 7rem;
 }
