--- a/Style/style.css
+++ b/Style/style.css
@@ -26,8 +26,10 @@ body {
     background-color: #444444;
     background-size: 100%;
     background-image: linear-gradient( 90deg, rgba(255, 80, 80, 0.4), rgba(68, 68, 68, 1)), url(https://360radio.com.co/wp-content/uploads/2020/06/Almacenes-tecnologia.jpg);
-    background-repeat: inherit;
+    background-repeat: no-repeat;
     text-shadow: 1px 2px 10px rgba(255, 255, 255, 0.548);
+    width: 100%;
+    height: 80vh;
 }
 
 main {
