--- a/Style/style.css
+++ b/Style/style.css
@@ -23,11 +23,11 @@ body {
     text-align: center;
     font-size: 20px;
     font-family: 'Roboto', sans-serif;
-    background-color: #444444;
+    background-repeat: no-repeat;
     background-size: 100%;
     background-image: linear-gradient( 90deg, rgba(255, 80, 80, 0.4), rgba(68, 68, 68, 1)), url(https://360radio.com.co/wp-content/uploads/2020/06/Almacenes-tecnologia.jpg);
-    background-repeat: no-repeat;
     text-shadow: 1px 2px 10px rgba(255, 255, 255, 0.548);
+    background-attachment: fixed;
     width: 100%;
     height: 80vh;
 }
