--- a/Style/style.css
+++ b/Style/style.css
@@ -26,6 +26,7 @@
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center;
+        background-attachment: fixed;
         background-image: linear-gradient( 90deg, rgba(255, 80, 80, 0.4), rgba(68, 68, 68, 1)), url(https://360radio.com.co/wp-content/uploads/2020/06/Almacenes-tecnologia.jpg);
         text-shadow: 1px 2px 10px rgba(255, 255, 255, 0.548);
         background-attachment: fixed;
