--- a/Style/style.css
+++ b/Style/style.css
@@ -1,120 +1,143 @@
-@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Otomanopee+One&family=Roboto&display=swap');
-body {
-    background-image: linear-gradient( 90deg, rgba(37, 36, 71, 0.863), rgb(0, 0, 0)), url(https://360radio.com.co/wp-content/uploads/2020/06/Almacenes-tecnologia.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: right;
-    background-color: whitesmoke;
-    background-attachment: fixed;
-    align-items: center;
-    font-size: 19px;
-    line-height: 1.3rem;
-    text-align: center;
-    height: 100%;
-    width: 100%;
-    color: #eeeeee;
-    -webkit-text-stroke: 0.02rem rgba(0, 0, 0, 0.664);
-}
-
-header {
-    line-height: 0.1rem;
-    font-family: 'Otomanopee One', sans-serif;
-    text-align: center;
-    padding: 1.1rem;
-    background-color: rgb(20, 30, 97);
-    height: 4rem;
-    width: auto;
-    align-items: center;
-    margin: 7% 25% auto 25%;
-    border-radius: 3.125rem;
-    -webkit-text-stroke: 0.02rem rgba(0, 0, 0, 0.664);
-    text-shadow: 1px 2px 10px rgba(0, 0, 0, 0.63);
-    box-shadow: 0px 10px 10px rgb(0, 0, 0);
-}
-
-main {
-    border-radius: 5rem;
-    line-height: 1.2rem;
-    margin: 0.1rem auto;
-    padding: 1.1rem;
-    background-color: rgb(120, 122, 145);
-    height: auto;
-    width: 25rem;
-    -webkit-text-stroke: 0.02rem rgba(0, 0, 0, 0.664);
-    text-shadow: 1px 2px 10px rgba(0, 0, 0, 0.63);
-    box-shadow: 0px 10px 10px black;
-}
-
-input {
-    border-radius: 10rem;
-    height: 1.5rem;
-    width: 50vh;
-    text-align: justify;
-    padding: 0.20rem;
-    background-color: lightgray;
-    margin-top: 0.2rem;
-    font-family: 'Roboto', sans-serif;
-    display: initial;
-    -webkit-text-stroke: 0.02rem rgba(0, 0, 0, 0.664);
-    text-shadow: 1px 2px 10px rgba(0, 0, 0, 0.63);
-}
-
-.boton-captura {
-    font-family: 'Indie Flower', cursive;
-    font-size: 1.5rem;
-    width: 10rem;
-    padding: 0.15rem;
-    background: rgba(218, 0, 55, 0.93);
-    color: whitesmoke;
-    border-radius: 2px;
-    cursor: pointer;
-    border-radius: 20px;
-    text-shadow: 1px 2px 10px rgba(255, 255, 255, 0.767);
-    -webkit-text-stroke: 0.02rem rgba(0, 0, 0, 0.664);
-    line-height: 1.5rem;
-    margin-top: 0.550rem;
-    box-shadow: 0px 10px 10px -6px black;
-}
-
-#valorDesc {
-    color: rgb(255, 5, 18);
-    -webkit-text-stroke: 0.02rem rgba(0, 0, 0, 0.664);
-    text-shadow: 1px 2px 10px rgba(255, 255, 255, 0.63);
-    text-align: center;
-    font-family: 'Roboto', sans-serif;
-}
-
-#inputCantComp {
-    text-align: center;
-    font-family: 'Roboto', sans-serif;
-    background-color: #141E61;
-    color: #eeeeee;
-}
-
-#inputValCompra {
-    width: 10rem;
-    text-align: center;
-    font-family: 'Roboto', sans-serif;
-    background-color: #141E61;
-    color: #eeeeee;
-}
-
-#inputValDescuento {
-    width: 10rem;
-    text-align: center;
-    font-family: 'Roboto', sans-serif;
-    background-color: #141E61;
-    color: #eeeeee;
-}
-
-#inputValTotal {
-    width: 15rem;
-    text-align: center;
-    font-family: 'Roboto', sans-serif;
-    background-color: #141E61;
-    color: #eeeeee;
-}
-
-.controlLabel {
-    color: #eeeeee;
-}
+    @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Otomanopee+One&family=Roboto&display=swap');
+    body {
+        background-image: linear-gradient( 90deg, rgba(37, 36, 71, 0.863), rgb(0, 0, 0)), url(https://360radio.com.co/wp-content/uploads/2020/06/Almacenes-tecnologia.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: right;
+        background-color: whitesmoke;
+        background-attachment: fixed;
+        align-items: center;
+        font-size: 19px;
+        line-height: 1.3rem;
+        text-align: center;
+        height: 100%;
+        width: 100%;
+        color: #eeeeee;
+        -webkit-text-stroke: 0.02rem rgba(0, 0, 0, 0.664);
+    }
+    
+    header {
+        line-height: 0.1rem;
+        font-family: 'Otomanopee One', sans-serif;
+        text-align: center;
+        padding: 1.1rem;
+        height: auto;
+        width: auto;
+        align-items: center;
+        border-radius: 3.125rem;
+        -webkit-text-stroke: 0.02rem rgba(0, 0, 0, 0.664);
+        text-shadow: 1px 2px 10px rgba(0, 0, 0, 0.63);
+        *box-shadow: 0px 10px 10px rgb(0, 0, 0);
+        */
+    }
+    
+    main {
+        border-radius: 5rem;
+        line-height: 1.2rem;
+        margin: auto;
+        padding: 1.1rem;
+        background-color: rgb(120, 122, 145);
+        height: auto;
+        width: 70vh;
+        -webkit-text-stroke: 0.02rem rgba(0, 0, 0, 0.664);
+        text-shadow: 1px 2px 10px rgba(0, 0, 0, 0.63);
+        box-shadow: 0px 10px 10px black;
+        box-sizing: border-box;
+    }
+    
+    input {
+        border-radius: 10rem;
+        height: 1.5rem;
+        width: 50vh;
+        text-align: justify;
+        padding: 0.20rem;
+        background-color: lightgray;
+        margin-top: 0.2rem;
+        font-family: 'Roboto', sans-serif;
+        display: initial;
+        -webkit-text-stroke: 0.02rem rgba(0, 0, 0, 0.664);
+        text-shadow: 1px 2px 10px rgba(0, 0, 0, 0.63);
+    }
+    
+    .boton-captura {
+        font-family: 'Indie Flower', cursive;
+        font-size: 1.5rem;
+        width: 10rem;
+        padding: 0.15rem;
+        background: rgba(218, 0, 55, 0.93);
+        color: whitesmoke;
+        border-radius: 2px;
+        cursor: pointer;
+        border-radius: 20px;
+        text-shadow: 1px 2px 10px rgba(255, 255, 255, 0.767);
+        -webkit-text-stroke: 0.02rem rgba(0, 0, 0, 0.664);
+        line-height: 1.5rem;
+        margin-top: 0.550rem;
+        box-shadow: 0px 10px 10px -6px black;
+    }
+    
+    #valorDesc {
+        color: rgb(255, 5, 18);
+        -webkit-text-stroke: 0.02rem rgba(0, 0, 0, 0.664);
+        text-shadow: 1px 2px 10px rgba(255, 255, 255, 0.63);
+        text-align: center;
+        font-family: 'Roboto', sans-serif;
+    }
+    
+    #inputCantComp {
+        text-align: center;
+        font-family: 'Roboto', sans-serif;
+        background-color: #141E61;
+        color: #eeeeee;
+    }
+    
+    #inputValCompra {
+        width: 10rem;
+        text-align: center;
+        font-family: 'Roboto', sans-serif;
+        background-color: #141E61;
+        color: #eeeeee;
+    }
+    
+    #inputValDescuento {
+        width: 10rem;
+        text-align: center;
+        font-family: 'Roboto', sans-serif;
+        background-color: #141E61;
+        color: #eeeeee;
+    }
+    
+    #inputValTotal {
+        width: 15rem;
+        text-align: center;
+        font-family: 'Roboto', sans-serif;
+        background-color: #141E61;
+        color: #eeeeee;
+    }
+    
+    .controlLabel {
+        color: #eeeeee;
+    }
+    
+    .contenedor {
+        width: 90%;
+        margin: 0 auto;
+        overflow: hidden;
+    }
+    
+    @media screen and (max-width: 900px) {
+        header {
+            width: 100%;
+            text-align: center;
+            font-size: 12px;
+        }
+    }
+    
+    @media screen and (max-width: 400px) {
+        .contenedor {
+            width: 100%;
+        }
+        input {
+            width: 100%;
+        }
+    }
