--- a/Style/style.css
+++ b/Style/style.css
@@ -189,3 +189,9 @@
             font-size: 13px;
         }
     }
+    
+    footer {
+        margin-top: 10%;
+        font-family: 'Indie Flower', cursive;
+        font-size: 1.5rem;
+    }
